PCB2.0 加入适量的rgb代码
bsp_rgb.c
bsp_rgb.h
800khz
84mhz
addr 104 psc 0
tim1 ch3
tim4 ch3

--- a/3.Software/Mini_SDVX_BSP/Mini_SDVX.ioc
+++ b/3.Software/Mini_SDVX_BSP/Mini_SDVX.ioc
@@ -20,14 +20,25 @@ AL94.I-CUBE-USBD-COMPOSITE.1.0.3._USBD_USE_HID_MOUSE=true
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3._USBD_USE_HS=false
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3_SwParameter=CompositeCcUSBJjCOMPOSITEJjHIDIiKEYBOARD\:true;CompositeCcUSBJjCOMPOSITEJjCore\:true;CompositeCcUSBJjCOMPOSITEJjCOMPOSITE\:true;CompositeCcUSBJjCOMPOSITEJjCDCIiACM\:true;CompositeCcUSBJjCOMPOSITEJjHIDIiMOUSE\:true;
 Dma.Request0=TIM4_CH3
-Dma.RequestsNb=1
+Dma.Request1=TIM1_CH3
+Dma.RequestsNb=2
+Dma.TIM1_CH3.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM1_CH3.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.TIM1_CH3.1.Instance=DMA2_Stream6
+Dma.TIM1_CH3.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM1_CH3.1.MemInc=DMA_MINC_ENABLE
+Dma.TIM1_CH3.1.Mode=DMA_CIRCULAR
+Dma.TIM1_CH3.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM1_CH3.1.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM1_CH3.1.Priority=DMA_PRIORITY_LOW
+Dma.TIM1_CH3.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.TIM4_CH3.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.TIM4_CH3.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.TIM4_CH3.0.Instance=DMA1_Stream7
-Dma.TIM4_CH3.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM4_CH3.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 Dma.TIM4_CH3.0.MemInc=DMA_MINC_ENABLE
 Dma.TIM4_CH3.0.Mode=DMA_CIRCULAR
-Dma.TIM4_CH3.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM4_CH3.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.TIM4_CH3.0.PeriphInc=DMA_PINC_DISABLE
 Dma.TIM4_CH3.0.Priority=DMA_PRIORITY_LOW
 Dma.TIM4_CH3.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
@@ -93,6 +104,7 @@ MxCube.Version=6.5.0
 MxDb.Version=DB.6.0.50
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.DMA1_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.EXTI15_10_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -215,7 +227,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_DMA_Init-DMA-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_SPI3_Init-SPI3-false-HAL-true,9-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_DMA_Init-DMA-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_SPI3_Init-SPI3-false-HAL-true,9-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_TIM3_Init-TIM3-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -280,17 +292,19 @@ SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,CLKPolarity,BaudR
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM1.IPParameters=Channel-PWM Generation3 CH3
+TIM1.IPParameters=Channel-PWM Generation3 CH3,Prescaler,Period
+TIM1.Period=104
+TIM1.Prescaler=0
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM3.IPParameters=Prescaler,Period,AutoReloadPreload
 TIM3.Period=999
 TIM3.Prescaler=83
-TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM4.IPParameters=Channel-PWM Generation3 CH3,Period,AutoReloadPreload,OCPolarity_3,Prescaler
 TIM4.OCPolarity_3=TIM_OCPOLARITY_HIGH
-TIM4.Period=9999
-TIM4.Prescaler=83
+TIM4.Period=104
+TIM4.Prescaler=0
 TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM5.IPParameters=Prescaler,Period,AutoReloadPreload
 TIM5.Period=999
