--- a/3.Software/Mini_SDVX_BSP/Mini_SDVX.ioc
+++ b/3.Software/Mini_SDVX_BSP/Mini_SDVX.ioc
@@ -10,10 +10,11 @@ AL94.I-CUBE-USBD-COMPOSITE.1.0.3.CompositeCcUSBJjCOMPOSITEJjCOMPOSITE=true
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3.CompositeCcUSBJjCOMPOSITEJjCore=true
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3.CompositeCcUSBJjCOMPOSITEJjHIDIiKEYBOARD=true
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3.CompositeCcUSBJjCOMPOSITEJjHIDIiMOUSE=true
-AL94.I-CUBE-USBD-COMPOSITE.1.0.3.IPParameters=_USBD_USE_CDC_ACM,_USBD_USE_HS,_USBD_USE_HID_MOUSE,_USBD_USE_HID_KEYBOARD,_USBD_USE_HID_CUSTOM,_STM32F1_DEVICE,CompositeCcUSBJjCOMPOSITEJjCore,CompositeCcUSBJjCOMPOSITEJjCDCIiACM,CompositeCcUSBJjCOMPOSITEJjHIDIiMOUSE,CompositeCcUSBJjCOMPOSITEJjHIDIiKEYBOARD,CompositeCcUSBJjCOMPOSITEJjCOMPOSITE
+AL94.I-CUBE-USBD-COMPOSITE.1.0.3.IPParameters=_USBD_USE_CDC_ACM,_USBD_USE_HS,_USBD_USE_HID_MOUSE,_USBD_USE_HID_KEYBOARD,_USBD_USE_HID_CUSTOM,_STM32F1_DEVICE,_USBD_USE_DFU,CompositeCcUSBJjCOMPOSITEJjCore,CompositeCcUSBJjCOMPOSITEJjCDCIiACM,CompositeCcUSBJjCOMPOSITEJjHIDIiMOUSE,CompositeCcUSBJjCOMPOSITEJjHIDIiKEYBOARD,CompositeCcUSBJjCOMPOSITEJjCOMPOSITE
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3.USBJjComposite_Checked=true
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3._STM32F1_DEVICE=false
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3._USBD_USE_CDC_ACM=true
+AL94.I-CUBE-USBD-COMPOSITE.1.0.3._USBD_USE_DFU=false
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3._USBD_USE_HID_CUSTOM=false
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3._USBD_USE_HID_KEYBOARD=true
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3._USBD_USE_HID_MOUSE=true
