--- a/3.Software/Mini_SDVX_BSP/Mini_SDVX.ioc
+++ b/3.Software/Mini_SDVX_BSP/Mini_SDVX.ioc
@@ -66,37 +66,36 @@ Mcu.Name=STM32F401C(B-C)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PH0 - OSC_IN
 Mcu.Pin1=PH1 - OSC_OUT
-Mcu.Pin10=PB1
-Mcu.Pin11=PB12
-Mcu.Pin12=PB13
-Mcu.Pin13=PB14
-Mcu.Pin14=PB15
-Mcu.Pin15=PA10
-Mcu.Pin16=PA11
-Mcu.Pin17=PA12
-Mcu.Pin18=PA13
-Mcu.Pin19=PA14
+Mcu.Pin10=PB12
+Mcu.Pin11=PB13
+Mcu.Pin12=PB14
+Mcu.Pin13=PB15
+Mcu.Pin14=PA10
+Mcu.Pin15=PA11
+Mcu.Pin16=PA12
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PA15
 Mcu.Pin2=PA0-WKUP
-Mcu.Pin20=PA15
-Mcu.Pin21=PB3
-Mcu.Pin22=PB4
-Mcu.Pin23=PB5
-Mcu.Pin24=PB6
-Mcu.Pin25=PB7
-Mcu.Pin26=PB8
-Mcu.Pin27=VP_SYS_VS_Systick
-Mcu.Pin28=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin29=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=PB3
+Mcu.Pin21=PB4
+Mcu.Pin22=PB5
+Mcu.Pin23=PB6
+Mcu.Pin24=PB7
+Mcu.Pin25=PB8
+Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin27=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin29=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin3=PA1
-Mcu.Pin30=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin31=VP_AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3
+Mcu.Pin30=VP_AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3
 Mcu.Pin4=PA3
 Mcu.Pin5=PA4
 Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
-Mcu.Pin9=PB0
-Mcu.PinsNb=32
+Mcu.Pin9=PB1
+Mcu.PinsNb=31
 Mcu.ThirdParty0=AL94.I-CUBE-USBD-COMPOSITE.1.0.3
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -107,6 +106,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.DMA1_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.EXTI0_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.EXTI15_10_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
@@ -120,10 +120,11 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
 NVIC.TIM3_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.TIM5_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-PA0-WKUP.GPIOParameters=GPIO_PuPd
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
 PA0-WKUP.Locked=true
-PA0-WKUP.Signal=GPIO_Input
+PA0-WKUP.Signal=GPXTI0
 PA1.Locked=true
 PA1.Signal=ADCx_IN1
 PA10.Locked=true
@@ -152,10 +153,6 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=Si_IRQ
-PB0.Locked=true
-PB0.Signal=GPXTI0
 PB1.Locked=true
 PB1.Signal=S_TIM3_CH4
 PB12.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
